[build-system]
requires = [
  "setuptools >= 61.0", # PEP-621
  "setuptools_scm[toml] >= 7.0.0",
]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.8"
dynamic = ["version"]
name = "python-vagrant"
description = "Python bindings for interacting with Vagrant virtual machines."
readme = "README.md"
authors = [{ "name" = "Todd Francis DeLuca", "email" = "todddeluca@yahoo.com" }]
maintainers = [
  { "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Utilities",
]
keywords = ["box", "vagrant", "vagrantfile", "virtual-machine", "virtualbox"]

[project.urls]
homepage = "https://github.com/pycontribs/python-vagrant"
repository = "https://github.com/pycontribs/python-vagrant"
changelog = "https://github.com/pycontribs/python-vagrant/releases"

[project.optional-dependencies]
test = [
  "coverage>=6.3",
  "pytest-cov>=3.0.0",
  "pytest>=7.0.0",
  "pytest-plus>=0.2",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# ensure we treat warnings as error
filterwarnings = ["error"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/vagrant/_version.py"
