[metadata]
name = python-vagrant
url = https://github.com/pycontribs/python-vagrant
project_urls =
  Bug Tracker = https://github.com/pycontribs/python-vagrant/issues
  CI: GitHub = https://github.com/pycontribs/python-vagrant/actions?query=workflow:gh+branch:main+event:push
  Source Code = https://github.com/pycontribs/python-vagrant
description = Python bindings for interacting with Vagrant virtual machines.
long_description = file: README.md
long_description_content_type = text/markdown
author = Todd Francis DeLuca
author_email = todddeluca@yahoo.com
license = MIT
license_file = LICENSE.txt
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
keywords =
  box
  vagrant
  vagrantfile
  virtual-machine
  virtualbox

[options]
use_scm_version = True
python_requires = >=3.7
; package_dir =
;   = src
; packages = find:

; [options.packages.find]
; where = src
